<resources>
    <string name="app_name">Eventory</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="my_events">My Events</string>
    <string name="findPeople">Find People</string>
    <string name="about">About</string>
    <string name="logOut">Log Out</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscriptionFeed">Subscription Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="category_feed">Category Feed</string>

    <string name="fragment_profile">Profile Fragment</string>
    <string name="fragment_home_feed">Home Feed Fragment</string>
    <string name="fragment_my_events">My Events Fragment</string>
    <string name="fragment_create_comment">Create Comment Fragment</string>
    <string name="fragment_notif">NotificationsFragment</string>
    <string name="fragment_categ_list">CategoriesListFragment</string>
    <string name="item_my_events">MyEventsTabsFragment</string>
    <string name="fragment_my_sub">MySubscriptionsFragment</string>
    <string name="fragment_find_people">FindPeopleFragment</string>
    <string name="fragment_my_sub_feed">My Subscription Feed Fragment</string>
    <string name="fragment_about">About Fragment</string>
    <string name="fragment_settings">Settings Fragment</string>
    <string name="fragment_edit_profile">Edit Profile Fragment</string>
    <string name="fragment_category_feed">Category Feed Fragment</string>
    <string name="fragment_profile_feed">Profile Feed Fragment</string>
    <string name="fragment_change_password">Change Password Fragment</string>
    <string name="fragment_create_event">Create Event Fragment</string>
    <string name="fragment_edit_event">Edit Event Fragment</string>
    <string name="fragment_invite_people">Invite People Fragment</string>



    <string name="event_details_fragment">Event Details Fragment</string>

    <string name="event_details">Event Details</string>
    <string name="event_id">Event Id</string>
    <string name="user_details">Profile Details</string>

    <string name="category_bundle"></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="password_change_success">Password Changed</string>
    <string name="comment_submit_success">Comment Submitted</string>

    <string name="missing_fields_error">Error #: Not All Fields Completed</string>
    <string name="incorrect_password_error">Error #: Incorrect Password</string>
    <string name="invalid_password_error">Error #: Invalid Password</string>
    <string name="mismatched_fields_error">Error #: Fields Do Not Match</string>


    <string name="profile_type">Profile Type</string>
    <string name="profile_type_owner">My Profile</string>
    <string name="profile_type_other">Other User Profile</string>

    <string name="filter_category">Category Filter</string>

    <!-- Base Filters -->
    <string name="tab_tag">Tab Tag</string>
    <string name="tab_new">New</string>
    <string name="tab_hot">Hot</string>
    <string name="tab_now">Now</string>
    <string name="tab_going">Going</string>
    <string name="tab_hosting">Hosting</string>

    <string name="user_id">User Id</string>
    <string name="first_four_events">First Four Events List</string>

    <string name="notification_type_reply">Reply Notification</string>
    <string name="notification_type_update">Update Notification</string>
    <string name="notification_type_invite">Invite Notification</string>

    <string name="cat_academic">Academic Category</string>
    <string name="cat_sports">Sports Category</string>
    <string name="cat_social">Social Category</string>
    <string name="cat_free">Free Category</string>
    <string name="cat_food">Food Category</string>
    <string name="cat_concerts">Concerts Category</string>
    <string name="cat_student_orgs">Student Orgs Category</string>

    <string name="errorEmptyFields">ERROR: Not all required fields are filled</string>
    <string name="errorEmptyName">ERROR: Name is required</string>
    <string name="errorPassMismatch">ERROR: Password mismatch</string>
    <string name="errorInvalidEmail">ERROR: A ucsd.edu email is required</string>
    <string name="errorEmailUsedBefore">ERROR: Email has already been used before</string>
    <string name="errorNoEmail">ERROR: Email not found</string>
    <string name="errorWrongPass">ERROR: Incorrect password</string>
    <string name="errorSamePass">ERROR: New password must be different from old password</string>
    <string name="errorEmptyComment">ERROR: No comment made</string>
    <string name="errorCategories">ERROR: More than 3 categories have been selected</string>
    <string name="errorLoginPass">ERROR: Invalid login details</string>
    <string name="errorFatal">ERROR: Something went wrong!</string>
    <string name="errorDateFormat">ERROR: Date must be in mm/dd/yy</string>
    <string name="errorInvalidDate">ERROR: Date must exist</string>
    <string name="errorIntegerInput">ERROR: Input must be integers</string>
    <string name="errorTimeFormat">ERROR: Time must be in _____</string>
    <string name="errorInvalidTime">ERROR: Time must exist</string>


    <string name="loading">Loading...</string>
    <string name="sleepTime">300</string>
</resources>
