<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/categories"
            android:title="@string/category" />
        <item
            android:id="@+id/myEvents"
            android:icon="@drawable/myevents"
            android:title="@string/my_events" />

        <item
            android:id="@+id/subscriptionFeed"
            android:icon="@drawable/subscriptionfeed"
            android:title="@string/subscriptionFeed" />

        <item
            android:id="@+id/subscriptions"
            android:icon="@drawable/subscriptions"
            android:title="@string/subscriptions" />
        <item
            android:id="@+id/find_people"
            android:icon="@drawable/findpeople"
            android:title="@string/findPeople" />

    </group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about"/>
            <item
                android:id="@+id/accMang"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            </group>
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logOut" />
        </menu>
    </item>
</menu>